# multi-tools-pdf-extractor

./: .dockerignore  .env_template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  asd.py  docker-compose.yaml  docker-compose.yml  index.html  pyproject.toml  requirements-test.txt  requirements.txt
app/: main.py
app/adapters/implementations/: brokerage_adapter.py  group_adapter.py  pdf_adapter.py  quick_text_adapter.py  template_adapter.py  ticket_adapter.py
app/adapters/interfaces/: data_parser.py
app/db/: connection.py  database.py  persistence.py
app/domain/models/: brokerage.py  group.py  quick_text.py  template.py  ticket.py
app/domain/use_cases/: group_use_case.py  pdf_use_case.py  quick_text_use_case.py  template_use_case.py  ticket_use_case.py
app/entities/: ticket_model.py  ticket_sql.py
app/entities/models/: ticket_model.py
app/entities/schemas/: base.py  ticket_schema.py
app/entity/: base.py  ticket.py  ticket_model.py  ticket_sql.py
app/infrastructure/api/routes/: group_router.py  (+4 more)
app/infrastructure/schemas/: brokerage_schema.py  group_schema.py  quick_text_schema.py  template_schema.py  ticket_schema.py
app/routes/: ticket_routers.py
app/use_cases/: ticket_use_case.py
multi_tools_pdf_extractor/: main.py
multi_tools_pdf_extractor/entities/: group.py  pdf.py  ticket.py
multi_tools_pdf_extractor/gateways/: pdf_data_extractor_client.py
multi_tools_pdf_extractor/use_cases/: quick_text_use_case.py  ticket_use_case.py
tests/: conftest.py  test_adapters.py  test_connection.py  test_db.py  test_entitys.py  test_ticket.py
(+33 files in other folders)
