[tool.poetry]
name = "multi-tools-pdf-extractor"
version = "0.1.0"
description = ""
authors = ["hallan-n <hallanneves01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
